fix(notices): align icons with headlines

--- a/user/themes/solarize/src/scss/_style.scss
+++ b/user/themes/solarize/src/scss/_style.scss
@@ -354,7 +354,7 @@ ul.special-icons span {
     line-height: 190%;
     overflow: hidden;
     position: absolute;
-    top: -0.34em;
+    top: -0.28em;
     width: 1.4em;
 }
 
